puppy_parser.output
   0  $accept : %entry% $end

   1  prog : exp EOF

   2  decs : dec

   3  dec : tydec
   4      | vardec
   5      | fundecs

   6  tydec : TYPE ID EQUAL ty

   7  ty : ID
   8     | LBRACE tyfields RBRACE
   9     | ARRAY OF ID COLON ID

  10  tyfields :
  11           | tyfield
  12           | tyfields COMMA tyfield

  13  tyfield : ID COLON ID

  14  vardec : VAR ID ASSIGN exp

  15  fundecs :
  16          | fundecs fundec

  17  fundec : FUNCTION ID LPAREN tyfield RPAREN EQUAL exp

  18  lvalue : ID
  19         | lvalue DOT ID
  20         | lvalue LBRACKET exp RBRACKET

  21  exp : lvalue
  22      | LPAREN expseq RPAREN
  23      | INT
  24      | STRING
  25      | MINUS exp
  26      | ID LBRACE records RBRACE
  27      | ID LPAREN funargs RPAREN
  28      | ID LBRACKET exp RBRACKET OF exp
  29      | exp op exp
  30      | exp compar exp
  31      | exp boolean exp
  32      | exp ASSIGN exp
  33      | IF exp THEN exp
  34      | IF exp THEN exp ELSE exp
  35      | WHILE exp DO exp
  36      | FOR ID ASSIGN exp TO exp DO exp
  37      | BREAK

  38  expseq : exp
  39         | expseq SEMICOLON exp

  40  records : record
  41          | records COMMA record

  42  record : ID EQUAL exp

  43  funargs :
  44          | exp
  45          | funargs COMMA exp

  46  op : PLUS
  47     | MINUS
  48     | TIMES
  49     | DIVIDE

  50  compar : LT
  51         | LE
  52         | GT
  53         | GE
  54         | EQUAL
  55         | NOTEQUAL

  56  boolean : AND
  57          | OR

  58  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (58)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	prog  goto 12
	exp  goto 13
	lvalue  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : WHILE . exp DO exp  (35)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 15
	lvalue  goto 14


state 4
	exp : FOR . ID ASSIGN exp TO exp DO exp  (36)

	ID  shift 16
	.  error


state 5
	exp : BREAK .  (37)

	.  reduce 37


state 6
	exp : IF . exp THEN exp  (33)
	exp : IF . exp THEN exp ELSE exp  (34)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 17
	lvalue  goto 14


state 7
	exp : LPAREN . expseq RPAREN  (22)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 18
	lvalue  goto 14
	expseq  goto 19


state 8
	exp : MINUS . exp  (25)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 20
	lvalue  goto 14


state 9
	exp : STRING .  (24)

	.  reduce 24


10: shift/reduce conflict (shift 23, reduce 18) on LBRACKET
state 10
	lvalue : ID .  (18)
	exp : ID . LBRACE records RBRACE  (26)
	exp : ID . LPAREN funargs RPAREN  (27)
	exp : ID . LBRACKET exp RBRACKET OF exp  (28)

	LPAREN  shift 21
	LBRACE  shift 22
	LBRACKET  shift 23
	EOF  reduce 18
	TO  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	DO  reduce 18
	RPAREN  reduce 18
	RBRACE  reduce 18
	RBRACKET  reduce 18
	COMMA  reduce 18
	DOT  reduce 18
	SEMICOLON  reduce 18
	ASSIGN  reduce 18
	PLUS  reduce 18
	MINUS  reduce 18
	TIMES  reduce 18
	DIVIDE  reduce 18
	OR  reduce 18
	AND  reduce 18
	EQUAL  reduce 18
	NOTEQUAL  reduce 18
	LT  reduce 18
	LE  reduce 18
	GT  reduce 18
	GE  reduce 18


state 11
	exp : INT .  (23)

	.  reduce 23


state 12
	%entry% : '\001' prog .  (58)

	.  reduce 58


state 13
	prog : exp . EOF  (1)
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	EOF  shift 24
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 14
	lvalue : lvalue . DOT ID  (19)
	lvalue : lvalue . LBRACKET exp RBRACKET  (20)
	exp : lvalue .  (21)

	LBRACKET  shift 41
	DOT  shift 42
	EOF  reduce 21
	TO  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	DO  reduce 21
	RPAREN  reduce 21
	RBRACE  reduce 21
	RBRACKET  reduce 21
	COMMA  reduce 21
	SEMICOLON  reduce 21
	ASSIGN  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	TIMES  reduce 21
	DIVIDE  reduce 21
	OR  reduce 21
	AND  reduce 21
	EQUAL  reduce 21
	NOTEQUAL  reduce 21
	LT  reduce 21
	LE  reduce 21
	GT  reduce 21
	GE  reduce 21


state 15
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : WHILE exp . DO exp  (35)

	DO  shift 43
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 16
	exp : FOR ID . ASSIGN exp TO exp DO exp  (36)

	ASSIGN  shift 44
	.  error


state 17
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : IF exp . THEN exp  (33)
	exp : IF exp . THEN exp ELSE exp  (34)

	THEN  shift 45
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 18
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	expseq : exp .  (38)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	RPAREN  reduce 38
	SEMICOLON  reduce 38

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 19
	exp : LPAREN expseq . RPAREN  (22)
	expseq : expseq . SEMICOLON exp  (39)

	RPAREN  shift 46
	SEMICOLON  shift 47
	.  error


state 20
	exp : MINUS exp .  (25)
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	TIMES  shift 28
	DIVIDE  shift 29
	EOF  reduce 25
	TO  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	DO  reduce 25
	RPAREN  reduce 25
	RBRACE  reduce 25
	RBRACKET  reduce 25
	COMMA  reduce 25
	SEMICOLON  reduce 25
	ASSIGN  reduce 25
	PLUS  reduce 25
	MINUS  reduce 25
	OR  reduce 25
	AND  reduce 25
	EQUAL  reduce 25
	NOTEQUAL  reduce 25
	LT  reduce 25
	LE  reduce 25
	GT  reduce 25
	GE  reduce 25

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 21
	exp : ID LPAREN . funargs RPAREN  (27)
	funargs : .  (43)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	RPAREN  reduce 43
	COMMA  reduce 43

	exp  goto 48
	lvalue  goto 14
	funargs  goto 49


state 22
	exp : ID LBRACE . records RBRACE  (26)

	ID  shift 50
	.  error

	records  goto 51
	record  goto 52


state 23
	exp : ID LBRACKET . exp RBRACKET OF exp  (28)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 53
	lvalue  goto 14


state 24
	prog : exp EOF .  (1)

	.  reduce 1


state 25
	exp : exp ASSIGN . exp  (32)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 54
	lvalue  goto 14


state 26
	op : PLUS .  (46)

	.  reduce 46


state 27
	op : MINUS .  (47)

	.  reduce 47


state 28
	op : TIMES .  (48)

	.  reduce 48


state 29
	op : DIVIDE .  (49)

	.  reduce 49


state 30
	boolean : OR .  (57)

	.  reduce 57


state 31
	boolean : AND .  (56)

	.  reduce 56


state 32
	compar : EQUAL .  (54)

	.  reduce 54


state 33
	compar : NOTEQUAL .  (55)

	.  reduce 55


state 34
	compar : LT .  (50)

	.  reduce 50


state 35
	compar : LE .  (51)

	.  reduce 51


state 36
	compar : GT .  (52)

	.  reduce 52


state 37
	compar : GE .  (53)

	.  reduce 53


state 38
	exp : exp op . exp  (29)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 55
	lvalue  goto 14


state 39
	exp : exp compar . exp  (30)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 56
	lvalue  goto 14


state 40
	exp : exp boolean . exp  (31)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 57
	lvalue  goto 14


state 41
	lvalue : lvalue LBRACKET . exp RBRACKET  (20)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 58
	lvalue  goto 14


state 42
	lvalue : lvalue DOT . ID  (19)

	ID  shift 59
	.  error


state 43
	exp : WHILE exp DO . exp  (35)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 60
	lvalue  goto 14


state 44
	exp : FOR ID ASSIGN . exp TO exp DO exp  (36)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 61
	lvalue  goto 14


state 45
	exp : IF exp THEN . exp  (33)
	exp : IF exp THEN . exp ELSE exp  (34)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 62
	lvalue  goto 14


state 46
	exp : LPAREN expseq RPAREN .  (22)

	.  reduce 22


state 47
	expseq : expseq SEMICOLON . exp  (39)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 63
	lvalue  goto 14


state 48
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	funargs : exp .  (44)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	RPAREN  reduce 44
	COMMA  reduce 44

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 49
	exp : ID LPAREN funargs . RPAREN  (27)
	funargs : funargs . COMMA exp  (45)

	RPAREN  shift 64
	COMMA  shift 65
	.  error


state 50
	record : ID . EQUAL exp  (42)

	EQUAL  shift 66
	.  error


state 51
	exp : ID LBRACE records . RBRACE  (26)
	records : records . COMMA record  (41)

	RBRACE  shift 67
	COMMA  shift 68
	.  error


state 52
	records : record .  (40)

	.  reduce 40


state 53
	exp : ID LBRACKET exp . RBRACKET OF exp  (28)
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	RBRACKET  shift 69
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 54
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : exp ASSIGN exp .  (32)

	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 32
	TO  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	DO  reduce 32
	RPAREN  reduce 32
	RBRACE  reduce 32
	RBRACKET  reduce 32
	COMMA  reduce 32
	SEMICOLON  reduce 32

	op  goto 38
	compar  goto 39
	boolean  goto 40


55: shift/reduce conflict (shift 25, reduce 29) on ASSIGN
55: shift/reduce conflict (shift 26, reduce 29) on PLUS
55: shift/reduce conflict (shift 27, reduce 29) on MINUS
55: shift/reduce conflict (shift 28, reduce 29) on TIMES
55: shift/reduce conflict (shift 29, reduce 29) on DIVIDE
55: shift/reduce conflict (shift 30, reduce 29) on OR
55: shift/reduce conflict (shift 31, reduce 29) on AND
55: shift/reduce conflict (shift 32, reduce 29) on EQUAL
55: shift/reduce conflict (shift 33, reduce 29) on NOTEQUAL
55: shift/reduce conflict (shift 34, reduce 29) on LT
55: shift/reduce conflict (shift 35, reduce 29) on LE
55: shift/reduce conflict (shift 36, reduce 29) on GT
55: shift/reduce conflict (shift 37, reduce 29) on GE
state 55
	exp : exp . op exp  (29)
	exp : exp op exp .  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 29
	TO  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	DO  reduce 29
	RPAREN  reduce 29
	RBRACE  reduce 29
	RBRACKET  reduce 29
	COMMA  reduce 29
	SEMICOLON  reduce 29

	op  goto 38
	compar  goto 39
	boolean  goto 40


56: shift/reduce conflict (shift 25, reduce 30) on ASSIGN
56: shift/reduce conflict (shift 26, reduce 30) on PLUS
56: shift/reduce conflict (shift 27, reduce 30) on MINUS
56: shift/reduce conflict (shift 28, reduce 30) on TIMES
56: shift/reduce conflict (shift 29, reduce 30) on DIVIDE
56: shift/reduce conflict (shift 30, reduce 30) on OR
56: shift/reduce conflict (shift 31, reduce 30) on AND
56: shift/reduce conflict (shift 32, reduce 30) on EQUAL
56: shift/reduce conflict (shift 33, reduce 30) on NOTEQUAL
56: shift/reduce conflict (shift 34, reduce 30) on LT
56: shift/reduce conflict (shift 35, reduce 30) on LE
56: shift/reduce conflict (shift 36, reduce 30) on GT
56: shift/reduce conflict (shift 37, reduce 30) on GE
state 56
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp compar exp .  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 30
	TO  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	DO  reduce 30
	RPAREN  reduce 30
	RBRACE  reduce 30
	RBRACKET  reduce 30
	COMMA  reduce 30
	SEMICOLON  reduce 30

	op  goto 38
	compar  goto 39
	boolean  goto 40


57: shift/reduce conflict (shift 25, reduce 31) on ASSIGN
57: shift/reduce conflict (shift 26, reduce 31) on PLUS
57: shift/reduce conflict (shift 27, reduce 31) on MINUS
57: shift/reduce conflict (shift 28, reduce 31) on TIMES
57: shift/reduce conflict (shift 29, reduce 31) on DIVIDE
57: shift/reduce conflict (shift 30, reduce 31) on OR
57: shift/reduce conflict (shift 31, reduce 31) on AND
57: shift/reduce conflict (shift 32, reduce 31) on EQUAL
57: shift/reduce conflict (shift 33, reduce 31) on NOTEQUAL
57: shift/reduce conflict (shift 34, reduce 31) on LT
57: shift/reduce conflict (shift 35, reduce 31) on LE
57: shift/reduce conflict (shift 36, reduce 31) on GT
57: shift/reduce conflict (shift 37, reduce 31) on GE
state 57
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp boolean exp .  (31)
	exp : exp . ASSIGN exp  (32)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 31
	TO  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	DO  reduce 31
	RPAREN  reduce 31
	RBRACE  reduce 31
	RBRACKET  reduce 31
	COMMA  reduce 31
	SEMICOLON  reduce 31

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 58
	lvalue : lvalue LBRACKET exp . RBRACKET  (20)
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)

	RBRACKET  shift 70
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 59
	lvalue : lvalue DOT ID .  (19)

	.  reduce 19


state 60
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : WHILE exp DO exp .  (35)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 35
	TO  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	DO  reduce 35
	RPAREN  reduce 35
	RBRACE  reduce 35
	RBRACKET  reduce 35
	COMMA  reduce 35
	SEMICOLON  reduce 35

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 61
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : FOR ID ASSIGN exp . TO exp DO exp  (36)

	TO  shift 71
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	.  error

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 62
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	exp : IF exp THEN exp .  (33)
	exp : IF exp THEN exp . ELSE exp  (34)

	ELSE  shift 72
	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	EOF  reduce 33
	TO  reduce 33
	THEN  reduce 33
	DO  reduce 33
	RPAREN  reduce 33
	RBRACE  reduce 33
	RBRACKET  reduce 33
	COMMA  reduce 33
	SEMICOLON  reduce 33

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 63
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	expseq : expseq SEMICOLON exp .  (39)

	ASSIGN  shift 25
	PLUS  shift 26
	MINUS  shift 27
	TIMES  shift 28
	DIVIDE  shift 29
	OR  shift 30
	AND  shift 31
	EQUAL  shift 32
	NOTEQUAL  shift 33
	LT  shift 34
	LE  shift 35
	GT  shift 36
	GE  shift 37
	RPAREN  reduce 39
	SEMICOLON  reduce 39

	op  goto 38
	compar  goto 39
	boolean  goto 40


state 64
	exp : ID LPAREN funargs RPAREN .  (27)

	.  reduce 27


state 65
	funargs : funargs COMMA . exp  (45)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 73
	lvalue  goto 14


state 66
	record : ID EQUAL . exp  (42)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 74
	lvalue  goto 14


state 67
	exp : ID LBRACE records RBRACE .  (26)

	.  reduce 26


state 68
	records : records COMMA . record  (41)

	ID  shift 50
	.  error

	record  goto 75


state 69
	exp : ID LBRACKET exp RBRACKET . OF exp  (28)

	OF  shift 76
	.  error


state 70
	lvalue : lvalue LBRACKET exp RBRACKET .  (20)

	.  reduce 20


state 71
	exp : FOR ID ASSIGN exp TO . exp DO exp  (36)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 77
	lvalue  goto 14


state 72
	exp : IF exp THEN exp ELSE . exp  (34)

	WHILE  shift 3
	FOR  shift 4
	BREAK  shift 5
	IF  shift 6
	LPAREN  shift 7
	MINUS  shift 8
	STRING  shift 9
	ID  shift 10
	INT  shift 11
	.  error

	exp  goto 78
	lvalue  goto 14


state 73
	exp : exp . op exp  (29)
	exp : exp . compar exp  (30)
	exp : exp . boolean exp  (31)
	exp : exp . ASSIGN exp  (32)
	funargs : funargs COMMA exp .  (45)
